# Any

./: .gitignore  CMakeLists.txt  README.md  run_tests.sh
.github/workflows/: ci.yml
examples/: CMakeLists.txt  main.c
include/: any.h
src/: any.c
tests/: CMakeLists.txt  compatibility_test.c  leak_demo.c  stress_test.c  test_any.c
